Add links in footer

--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
     <div class="container">
         <div class="col-md-3">
             <h1>BROWSE</h1>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
-            <a href="#"></a>
+            <a href="#">Home</a>
+            <a href="#">About Us</a>
+            <a href="#">Categories</a>
+            <a href="#">Info</a>
+            <a href="#">Services</a>
         </div>
     </div>
 </section>
