--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Ranga|Sedgwick+Ave+Display|Yeseva+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Ranga|Sedgwick+Ave+Display|Yeseva+One"
+          rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -154,8 +155,8 @@
                     <h2>Stay</h2>
                     <h2>gentleman</h2>
                 </div>
-                    <button>Buy now</button>
-                    <a href="#">Share<i class="fa fa-share" aria-hidden="true"></i></a>
+                <button>Buy now</button>
+                <a href="#">Share<i class="fa fa-share" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-6 horizontaly">
                 <img src="img/stone-img.jpg">
@@ -182,12 +183,55 @@
     <div class="container">
         <div class="col-md-3">
             <h1>BROWSE</h1>
-            <a href="#">Home</a>
-            <a href="#">About Us</a>
-            <a href="#">Categories</a>
-            <a href="#">Info</a>
-            <a href="#">Services</a>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Categories</a></li>
+                <li><a href="#">Info</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
         </div>
+        <div class="col-md-3">
+            <h1>SHOP</h1>
+            <ul>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Help & Guide</a></li>
+                <li><a href="#">Shipping & Returns</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+        <div class="col-md-3">
+            <h1>Contact</h1>
+            <p>Quotes PSD Template
+                Rudra Street, 12354 Villa
+                My State - My Country
+                987658</p>
+            <p>Phone: + 01 234 567 890
+                Fax: + 01 234 567 890
+                <a href="mailto:gmail@gmail.com">graphicsfuel@gmail.com</a></p>
+        </div>
+        <div class="col-md-3">
+            <h1>SUBSCRIBE NOW</h1>
+            <p class="nr2">Get our latest news and product updates daily</p>
+            <input placeholder="Email Address">
+            <button>Submit</button>
+        </div>
+    </div>
+</section>
+
+<section class="last-footer">
+    <div class="container">
+        <p>2016 © Copyright - Quotes PSD Templates. All rights reserved.</p>
+     <ul>
+         <li><a href="https://facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+         <li><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+         <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+         <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+         <li><a href="https://plus.google.com/discover" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+         <li><a href="https://www.pinterest.com" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+         <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+         <li><a href="https://www.gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+     </ul>
     </div>
 </section>
 
