--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
             <li data-target="#myCarousel" data-slide-to="3"></li>
             <li data-target="#myCarousel" data-slide-to="4"></li>
         </ol>
@@ -62,17 +62,9 @@
 
             <div class="item">
                 <img src="img/nav-img-2.jpg" alt="" style="width:100%;">
-            </div>
-
-            <div class="item">
-                <img src="img/nav-img-3.jpg" alt="" style="width:100%;">
-            </div>
-
-            <div class="item">
-                <img src="img/nav-img-4.jpg" alt="" style="width:100%;">
+                    <h1>DON'T CRY</h1>
             </div>
         </div>
-
     </div>
 </section>
 
