--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </li>
             <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"
                                                                        aria-hidden="true"></i></a></li>
-            <li><a href="https://www.gmail.com" target="_blank"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+            <li><a href="mailto:mailto@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
             </li>
         </ul>
     </div>
