--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Ranga|Sedgwick+Ave+Display|Yeseva+One"
-          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -98,7 +97,7 @@
                 a multitude of ills. It's probably the most important thing in a person.</h1>
             <p>Audrey Hepburn</p>
         </div>
-        <div class="float-right">
+        <div class="float-right wow slideInRight">
             <img src="img/audrey-img.jpg">
         </div>
     </div>
@@ -261,6 +260,12 @@
         $("#popup-menu").hide();
     });
 </script>
+
+<script src="js/wow.min.js"></script>
+<script>
+    new WOW().init();
+</script>
+
 
 
 </body>
