--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Sedgwick+Ave+Display" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -28,7 +28,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
-            <a href="#"><span class="close-menu">X close</span></a>
+            <a href="#"><span class="close-menu"><span class="x">X</span> close</span></a>
         </div>
     </div>
     <div class="container">
@@ -58,10 +58,19 @@
                     <p>it costc you nothing</p>
                 </div>
             </div>
-
             <div class="item">
                 <img src="img/nav-img-2.jpg" alt="" style="width:100%;">
-                    <h1>DON'T CRY</h1>
+                <h1>DON'T CRY</h1>
+            </div>
+            <div class="item">
+                <img src="img/nav-img.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="item">
+                <img src="img/nav-img-2.jpg" alt="" style="width:100%;">
+            </div>
+            <div class="item">
+                <img src="img/nav-img.jpg" alt="" style="width:100%;">
+                <h1>ISMET PEJA</h1>
             </div>
         </div>
     </div>
@@ -91,16 +100,45 @@
 </section>
 
 <section class="audrey-hepburn">
-    <div class="col-md-12">
-        <div class="float-left">
-            <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
-                a multitude of ills. It's probably the most important thing in a person.</h1>
-            <p>Audrey Hepburn</p>
+        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+            </ol>
+            <!-- Carousel items -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <div class="float-left">
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                            a multitude of ills. It's probably the most important thing in a person.</h1>
+                        <p>Audrey Hepburn</p>
+                    </div>
+                    <div class="float-right">
+                        <img src="img/audrey-img.jpg">
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="float-left">
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                            a multitude of ills. It's probably the most.</h1>
+                    </div>
+                    <div class="float-right">
+                        <img src="img/audrey-img-2.jpg">
+                    </div>
+                </div>
+
+                <div class="item">
+                    <div class="float-left">
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most</h1>
+                    </div>
+                    <div class="float-right">
+                        <img src="img/audrey-img-3.jpeg">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="float-right wow slideInRight">
-            <img src="img/audrey-img.jpg">
-        </div>
-    </div>
 </section>
 
 <section class="reason">
@@ -261,11 +299,19 @@
     });
 </script>
 
+<script>
+    $('.carousel').carousel();
+</script>
+
+<script>
+    $('.second-block #carousel').attr("id","#carousel-2").find('.controls a').attr("href","#carousel-2");
+    $('.fourth-block #carousel').attr("id","#carousel-3").find('.controls a').attr("href","#carousel-3");
+</script>
+
 <script src="js/wow.min.js"></script>
 <script>
     new WOW().init();
 </script>
-
 
 
 </body>
