--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Sedgwick+Ave+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,700i|Sedgwick+Ave+Display|Montserrat|"
+          rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -79,66 +80,61 @@
 <section class="free-psd">
     <div class="container">
         <h2>The most inclusive</h2>
-        <h1><b>Free PSD Template</b></h1>
+        <h1>Free PSD Template</h1>
         <p>Free for commercial and personal use.</p>
         <p>You can easily edit its contents and code it for yourself or your client!</p>
         <hr>
-        <p class="phg2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-            been
-            the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
-            and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-            into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-            release of
-            Letraset sheets containing
+        <p class="phg2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget tortor iaculis
+            tristique. Aliquam tincidunt posuere tortor hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla.
+            Pellentesque dignissim accumsan lobortis. Sed pharetra erat vitae dui imperdiet quis commodo orci dapibus.
             <br>
             <br>
-            Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.</p>
+            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce at nunc libero.
+            Nam metus lorem, rhoncus ac mattis ornare, blandit vel risus.
     </div>
 </section>
 
 <section class="audrey-hepburn">
-        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
-                            a multitude of ills. It's probably the most important thing in a person.</h1>
-                        <p>Audrey Hepburn</p>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img.jpg">
-                    </div>
+    <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
+        </ol>
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        a multitude of ills. It's probably the most important thing in a person.</h1>
+                    <p>Audrey Hepburn</p>
                 </div>
-
-                <div class="item">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
-                            a multitude of ills. It's probably the most.</h1>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img-2.jpg">
-                    </div>
+                <div class="float-right">
+                    <img src="img/audrey-img.jpg">
                 </div>
+            </div>
 
-                <div class="item">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most</h1>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img-3.jpeg">
-                    </div>
+            <div class="item">
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        a multitude of ills. It's probably the most.</h1>
+                </div>
+                <div class="float-right">
+                    <img src="img/audrey-img-2.jpg">
+                </div>
+            </div>
+
+            <div class="item">
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most</h1>
+                </div>
+                <div class="float-right">
+                    <img src="img/audrey-img-3.jpeg">
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <section class="reason">
@@ -146,19 +142,19 @@
         <h1>Reasons to be happy</h1>
         <hr>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 border1">
                 <h2>you are alive</h2>
                 <h6>Waking up to see another day is a blessing. Don't take it for granted. Make it count and be happy
                     that you're alive.</h6>
                 <p class="down">Anonymous</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 border2">
                 <h2>someone loves you</h2>
                 <h6>Someone who really loves you sees what a mess you can be, how moody you can get, how hard you are to
                     handle, but still wants you in their life.</h6>
                 <p class="up">Anonymous</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 border3">
                 <h2>Enjoy the moment</h2>
                 <h6>Sometimes you will never know the true value of a moment until it becomes a memory. </h6>
                 <p class="down">Anonymous</p>
@@ -187,7 +183,7 @@
         <hr>
         <div class="row">
             <div class="col-md-6 verticaly">
-                <img src="img/costum.jpg">
+                <img src="img/costum.jpg" class="bk4">
                 <div class="txt">
                     <h2>Stay</h2>
                     <h2>True,</h2>
@@ -198,17 +194,23 @@
                 <a href="#">Share<i class="fa fa-share" aria-hidden="true"></i></a>
             </div>
             <div class="col-md-6 horizontaly">
-                <img src="img/stone-img.jpg">
-                <h3>And muse of nature
-                    with a poet’s eye</h3>
-                <h6>Thomas Campbell</h6>
+                <div class="bk3">
+                    <img src="img/stone-img.jpg">
+                    <h3>And muse of nature
+                        with a poet’s eye</h3>
+                    <h6>Thomas Campbell</h6>
+                </div>
             </div>
             <div class="col-md-3 left1">
-                <img src="img/coffe-img.jpg">
-                <h3>Make Work Fun & Play</h3>
+                <div class="bk2">
+                    <img src="img/coffe-img.jpg">
+                    <h3>Make Work Fun & Play</h3>
+                </div>
             </div>
             <div class="col-md-3 right1">
-                <img src="img/buy-now.jpg">
+                <div class="bk">
+                    <img src="img/buy-now.jpg">
+                </div>
                 <h3>Silence is <span>Golden</span></h3>
             </div>
             <div class="col-md-12">
@@ -240,7 +242,7 @@
             </ul>
         </div>
         <div class="col-md-3">
-            <h1>Contact</h1>
+            <h1>CONTACT</h1>
             <p>Quotes PSD Template
                 Rudra Street, 12354 Villa
                 My State - My Country
@@ -251,7 +253,7 @@
         </div>
         <div class="col-md-3">
             <h1>SUBSCRIBE NOW</h1>
-            <p class="nr2">Get our latest news and product updates daily</p>
+            <p>Get our latest news and product updates daily</p>
             <input placeholder="Email Address">
             <button>Submit</button>
         </div>
@@ -304,8 +306,8 @@
 </script>
 
 <script>
-    $('.second-block #carousel').attr("id","#carousel-2").find('.controls a').attr("href","#carousel-2");
-    $('.fourth-block #carousel').attr("id","#carousel-3").find('.controls a').attr("href","#carousel-3");
+    $('.second-block #carousel').attr("id", "#carousel-2").find('.controls a').attr("href", "#carousel-2");
+    $('.fourth-block #carousel').attr("id", "#carousel-3").find('.controls a').attr("href", "#carousel-3");
 </script>
 
 <script src="js/wow.min.js"></script>
