--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 
-<section class="menu"> 
+<section class="menu">
     <div id="popup-menu">
         <div class="hg-wd">
             <ul>
@@ -29,7 +29,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
-            <a href="#"><span class="close-menu"><span class="x">X</span> close</span></a>
+            <a href="#"><span class="close-menu"><img src="img/X-logo.png">close</span></a>
         </div>
     </div>
     <div class="container">
@@ -85,8 +85,8 @@
         <p>You can easily edit its contents and code it for yourself or your client!</p>
         <hr>
         <p class="phg2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget tortor iaculis
-            tristique. Aliquam tincidunt posuere tortor hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla.
-            Pellentesque dignissim accumsan lobortis. Sed pharetra erat vitae dui imperdiet quis commodo orci dapibus.
+            tristique. Ali-quam tincidunt posuere tortor hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla.
+            Pellen-tesque dignissim accumsan lobortis. Sed pharetra erat vitae dui imperdiet quis commodo orci dapibus.
             <br>
             <br>
             Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce at nunc libero.
@@ -120,7 +120,7 @@
                     <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
                         a multitude of ills. It's probably the most.</h1>
                 </div>
-                <div class="float-right">
+                <div class="float-right move-img">
                     <img src="img/audrey-img-2.jpg">
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <div class="float-left">
                     <h1>I love people who make me laugh. I honestly think it’s the thing I like most</h1>
                 </div>
-                <div class="float-right">
+                <div class="float-right move-img">
                     <img src="img/audrey-img-3.jpeg">
                 </div>
             </div>
@@ -173,7 +173,7 @@
 
 <section class="forth">
     <h1>I love you for all that you are, all that you have been,
-        and all you're yet to be.</h1>
+        <br>and all you're yet to be.</h1>
     <p>Quote of the day, from <a href="#"> Love Quotes</a></p>
 </section>
 
@@ -191,7 +191,7 @@
                     <h2>gentleman</h2>
                 </div>
                 <button>Buy now</button>
-                <a href="#">Share<i class="fa fa-share" aria-hidden="true"></i></a>
+                <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank"">Share<img src="img/share-logo.png"></a>
             </div>
             <div class="col-md-6 horizontaly">
                 <div class="bk3">
@@ -199,12 +199,17 @@
                     <h3>And muse of nature
                         with a poet’s eye</h3>
                     <h6>Thomas Campbell</h6>
+                    <button>Buy now</button>
+                    <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank"">Share<img src="img/share-logo.png"></a>
                 </div>
             </div>
+
             <div class="col-md-3 left1">
                 <div class="bk2">
                     <img src="img/coffe-img.jpg">
                     <h3>Make Work Fun & Play</h3>
+                    <button>Buy now</button>
+                    <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank"">Share<img src="img/share-logo.png"></a>
                 </div>
             </div>
             <div class="col-md-3 right1">
@@ -212,10 +217,13 @@
                     <img src="img/buy-now.jpg">
                 </div>
                 <h3>Silence is <span>Golden</span></h3>
+                <button>Buy now</button>
+                <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
+                    Share<img src="img/share-logo.png"></a>
             </div>
-            <div class="col-md-12">
-                <button>Browse Posters</button>
-            </div>
+        </div>
+        <div class="col-md-12">
+            <button>Browse Posters</button>
         </div>
     </div>
 </section>
@@ -253,7 +261,7 @@
         </div>
         <div class="col-md-3">
             <h1>SUBSCRIBE NOW</h1>
-            <p>Get our latest news and product updates daily</p>
+            <p class="pheight">Get our latest news and product updates daily</p>
             <input placeholder="Email Address">
             <button>Submit</button>
         </div>
@@ -299,6 +307,7 @@
         $(".icone").show();
         $("#popup-menu").hide();
     });
+
 </script>
 
 <script>
