--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
@@ -114,23 +115,34 @@
                         <img src="img/audrey-img.jpg" class="lp-respons">
                     </div>
                 </div>
-
-                <div class="item">
+                <div class="item ">
                     <div class="float-left">
                         <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
-                            a multitude of ills. It's probably the most.</h1>
+                            a multitude of ills. It's probably the most important thing in a person.</h1>
+                        <p>Audrey Hepburn</p>
                     </div>
-                    <div class="float-right move-img">
-                        <img src="img/audrey-img-2.jpg">
+                    <div class="float-right">
+                        <img src="img/audrey-img-2.jpg" class="lp-respons">
                     </div>
                 </div>
-
-                <div class="item">
+                <div class="item ">
                     <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most</h1>
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                            a multitude of ills. It's probably the most important thing in a person.</h1>
+                        <p>Audrey Hepburn</p>
                     </div>
-                    <div class="float-right move-img">
-                        <img src="img/audrey-img-3.jpeg">
+                    <div class="float-right">
+                        <img src="img/audrey-img-3.jpeg" class="lp-respons">
+                    </div>
+                </div>
+                <div class="item ">
+                    <div class="float-left">
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                            a multitude of ills. It's probably the most important thing in a person.</h1>
+                        <p>Audrey Hepburn</p>
+                    </div>
+                    <div class="float-right">
+                        <img src="img/audrey-img-4.jpg" class="lp-respons">
                     </div>
                 </div>
             </div>
