--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <hr>
             <div class="row">
                 <div class="col-md-6 verticaly">
-                    <img src="img/costum.jpg" class="bk4">
+                    <img src="img/costum.jpg" class="bk4 img4">
                     <div class="txt">
                         <h2>Stay</h2>
                         <h2>True,</h2>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-md-6 horizontaly">
                     <div class="bk3">
-                        <img src="img/stone-img.jpg" class="wdth">
+                        <img src="img/stone-img.jpg" class="wdth img4">
                         <h3>And muse of nature
                             with a poet’s eye</h3>
                         <h6>Thomas Campbell</h6>
@@ -218,7 +218,7 @@
 
                 <div class="col-md-3 left1">
                     <div class="bk2">
-                        <img src="img/coffe-img.jpg">
+                        <img src="img/coffe-img.jpg" class="img4">
                         <h3>Make Work Fun & Play</h3>
                         <button>Buy now</button>
                         <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img src="img/share-logo.png" class="img"></a>
@@ -226,7 +226,7 @@
                 </div>
                 <div class="col-md-3 right1">
                     <div class="bk">
-                        <img src="img/buy-now.jpg">
+                        <img src="img/buy-now.jpg" class="img4">
                     </div>
                     <h3>Silence is <span>Golden</span></h3>
                     <button>Buy now</button>
