--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
                     <img src="img/nav-img.jpg" alt="" style="width:100%;">
                     <h1>ISMET PEJA</h1>
                 </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
     </section>
@@ -330,6 +338,11 @@
 <script>
     $('.second-block #carousel').attr("id", "#carousel-2").find('.controls a').attr("href", "#carousel-2");
     $('.fourth-block #carousel').attr("id", "#carousel-3").find('.controls a').attr("href", "#carousel-3");
+</script>
+
+<script>
+    $('a.carousel-control.right').click(function() { return false; });
+    $('a.carousel-control.left').click(function() { return false; });
 </script>
 
 <script src="js/wow.min.js"></script>
