--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,700i|Sedgwick+Ave+Display|Montserrat|"
           rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -94,11 +96,14 @@
             <p>You can easily edit its contents and code it for yourself or your client!</p>
             <hr>
             <p class="phg2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget nisi eget tortor iaculis
-                tristique. Ali-quam tincidunt posuere tortor hendrerit elementum. Nunc laoreet lorem a sem auctor fringilla.
-                Pellen-tesque dignissim accumsan lobortis. Sed pharetra erat vitae dui imperdiet quis commodo orci dapibus.
+                tristique. Ali-quam tincidunt posuere tortor hendrerit elementum. Nunc laoreet lorem a sem auctor
+                fringilla.
+                Pellen-tesque dignissim accumsan lobortis. Sed pharetra erat vitae dui imperdiet quis commodo orci
+                dapibus.
                 <br>
                 <br>
-                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce at nunc libero.
+                Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce at nunc
+                libero.
                 Nam metus lorem, rhoncus ac mattis ornare, blandit vel risus.
         </div>
     </section>
@@ -115,7 +120,8 @@
             <div class="carousel-inner">
                 <div class="item active">
                     <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                            cures
                             a multitude of ills. It's probably the most important thing in a person.</h1>
                         <p>Audrey Hepburn</p>
                     </div>
@@ -125,7 +131,8 @@
                 </div>
                 <div class="item ">
                     <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                            cures
                             a multitude of ills. It's probably the most important thing in a person.</h1>
                         <p>Audrey Hepburn</p>
                     </div>
@@ -135,7 +142,8 @@
                 </div>
                 <div class="item ">
                     <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                            cures
                             a multitude of ills. It's probably the most important thing in a person.</h1>
                         <p>Audrey Hepburn</p>
                     </div>
@@ -145,7 +153,8 @@
                 </div>
                 <div class="item ">
                     <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It cures
+                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                            cures
                             a multitude of ills. It's probably the most important thing in a person.</h1>
                         <p>Audrey Hepburn</p>
                     </div>
@@ -164,13 +173,15 @@
             <div class="row">
                 <div class="col-md-6 border1">
                     <h2>you are alive</h2>
-                    <h6>Waking up to see another day is a blessing. Don't take it for granted. Make it count and be happy
+                    <h6>Waking up to see another day is a blessing. Don't take it for granted. Make it count and be
+                        happy
                         that you're alive.</h6>
                     <p class="down">Anonymous</p>
                 </div>
                 <div class="col-md-6 border2">
                     <h2>someone loves you</h2>
-                    <h6>Someone who really loves you sees what a mess you can be, how moody you can get, how hard you are to
+                    <h6>Someone who really loves you sees what a mess you can be, how moody you can get, how hard you
+                        are to
                         handle, but still wants you in their life.</h6>
                     <p class="up">Anonymous</p>
                 </div>
@@ -211,7 +222,8 @@
                         <h2>gentleman</h2>
                     </div>
                     <button>Buy now</button>
-                    <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img src="img/share-logo.png" class="img"></a>
+                    <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com"
+                       target="_blank">Share<img src="img/share-logo.png" class="img"></a>
                 </div>
                 <div class="col-md-6 horizontaly">
                     <div class="bk3">
@@ -220,7 +232,8 @@
                             with a poet’s eye</h3>
                         <h6>Thomas Campbell</h6>
                         <button>Buy now</button>
-                        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img src="img/share-logo.png" class="img"></a>
+                        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img
+                                src="img/share-logo.png" class="img"></a>
                     </div>
                 </div>
 
@@ -229,7 +242,8 @@
                         <img src="img/coffe-img.jpg" class="img4">
                         <h3>Make Work Fun & Play</h3>
                         <button>Buy now</button>
-                        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img src="img/share-logo.png" class="img"></a>
+                        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">Share<img
+                                src="img/share-logo.png" class="img"></a>
                     </div>
                 </div>
                 <div class="col-md-3 right1">
@@ -294,14 +308,17 @@
             <ul>
                 <li><a href="https://facebook.com" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                 </li>
-                <li><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                </li>
                 <li><a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-linkedin"
                                                                            aria-hidden="true"></i></a></li>
-                <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                <li><a href="https://www.youtube.com" target="_blank"><i class="fa fa-youtube-play"
+                                                                         aria-hidden="true"></i></a>
                 </li>
                 <li><a href="https://plus.google.com/discover" target="_blank"><i class="fa fa-google-plus"
                                                                                   aria-hidden="true"></i></a></li>
-                <li><a href="https://www.pinterest.com" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a>
+                <li><a href="https://www.pinterest.com" target="_blank"><i class="fa fa-pinterest-p"
+                                                                           aria-hidden="true"></i></a>
                 </li>
                 <li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"
                                                                            aria-hidden="true"></i></a></li>
@@ -338,16 +355,6 @@
 <script>
     $('.second-block #carousel').attr("id", "#carousel-2").find('.controls a').attr("href", "#carousel-2");
     $('.fourth-block #carousel').attr("id", "#carousel-3").find('.controls a').attr("href", "#carousel-3");
-</script>
-
-<script>
-    $('a.carousel-control.right').click(function() { return false; });
-    $('a.carousel-control.left').click(function() { return false; });
-</script>
-
-<script src="js/wow.min.js"></script>
-<script>
-    new WOW().init();
 </script>
 
 
