--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <link href="fonts/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:200,300,400,500,600,700,700i|Sedgwick+Ave+Display|Montserrat|"
           rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -109,61 +112,79 @@
     </section>
 
     <section class="audrey-hepburn">
-        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel" data-slide-to="1"></li>
-                <li data-target="#carousel" data-slide-to="2"></li>
-                <li data-target="#carousel" data-slide-to="3"></li>
-            </ol>
-            <!-- Carousel items -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
-                            cures
-                            a multitude of ills. It's probably the most important thing in a person.</h1>
-                        <p>Audrey Hepburn</p>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img.jpg" class="lp-respons">
-                    </div>
+        <div class="slick-slider">
+            <div>
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                        cures
+                        a multitude of ills. It's probably the most important thing in a person.</h1>
+                    <p>Audrey Hepburn</p>
                 </div>
-                <div class="item ">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
-                            cures
-                            a multitude of ills. It's probably the most important thing in a person.</h1>
-                        <p>Audrey Hepburn</p>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img-2.jpg" class="lp-respons">
-                    </div>
+                <div class="float-right">
+                    <img src="img/audrey-img.jpg" class="lp-respons">
                 </div>
-                <div class="item ">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
-                            cures
-                            a multitude of ills. It's probably the most important thing in a person.</h1>
-                        <p>Audrey Hepburn</p>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img-3.jpeg" class="lp-respons">
-                    </div>
+            </div>
+            <div>
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                        cures
+                        a multitude of ills. It's probably the most important thing in a person.</h1>
+                    <p>Audrey Hepburn</p>
                 </div>
-                <div class="item ">
-                    <div class="float-left">
-                        <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
-                            cures
-                            a multitude of ills. It's probably the most important thing in a person.</h1>
-                        <p>Audrey Hepburn</p>
-                    </div>
-                    <div class="float-right">
-                        <img src="img/audrey-img-4.jpg" class="lp-respons">
-                    </div>
+                <div class="float-right">
+                    <img src="img/audrey-img-2.jpg" class="lp-respons">
+                </div>
+            </div>
+            <div>
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                        cures
+                        a multitude of ills. It's probably the most important thing in a person.</h1>
+                    <p>Audrey Hepburn</p>
+                </div>
+                <div class="float-right">
+                    <img src="img/audrey-img-3.jpeg" class="lp-respons">
+                </div>
+            </div>
+
+            <div>
+                <div class="float-left">
+                    <h1>I love people who make me laugh. I honestly think it’s the thing I like most, to laugh. It
+                        cures
+                        a multitude of ills. It's probably the most important thing in a person.</h1>
+                    <p>Audrey Hepburn</p>
+                </div>
+                <div class="float-right">
+                    <img src="img/audrey-img-4.jpg" class="lp-respons">
                 </div>
             </div>
         </div>
+        <ol class="carousel-indicators">
+            <li data-target="#carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel" data-slide-to="1"></li>
+            <li data-target="#carousel" data-slide-to="2"></li>
+            <li data-target="#carousel" data-slide-to="3"></li>
+        </ol>
+        <!--<div>-->
+        <!--<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel">-->
+
+        <!--&lt;!&ndash; Carousel items &ndash;&gt;-->
+        <!--<div class="carousel-inner">-->
+        <!--<div class="item active">-->
+
+        <!--</div>-->
+        <!--<div class="item ">-->
+
+        <!--</div>-->
+        <!--<div class="item ">-->
+
+        <!--</div>-->
+        <!--<div class="item ">-->
+
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
     </section>
 
     <section class="reason">
@@ -357,7 +378,17 @@
     $('.fourth-block #carousel').attr("id", "#carousel-3").find('.controls a').attr("href", "#carousel-3");
 </script>
 
+<script src="js/slick.min.js"></script>
 
+<script>
+    $('.slick-slider').slick({
+        dots: true,
+        infinite: true,
+        slidesToShow: 1,
+        slidesToScroll: 1
+    });
+
+</script>
 </body>
 </html>
 
